syntax = "proto3";

package proto;

option go_package = "./proto";

service OrderService {
    rpc SubmitOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string order_id = 1;
    string item_name = 2;
    int32 quantity = 3;
    double price = 4;
}

message OrderResponse {
    string order_id = 1;
    string status = 2;
}
